--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/themes": "^3.1.4",
     "@types/react-dom": "^18.3.0",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.14.0",
     "lucide-react": "^0.438.0",
     "mysql2": "^3.11.3",
     "next": "^14.2.13",
@@ -48,6 +50,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.4",
     "@types/testing-library__jest-dom": "^5.14.9",
