--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next-auth": "^4.24.8",
     "prisma": "^5.20.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "sonner": "^1.5.0",
